# django

./: db.sqlite3  pyproject.toml
blog/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: comment_form.html  post_list.html
myproject/: settings.py  urls.py
myproject/blog/: admin.py  apps.py  forms.py  models.py  services.py  views.py
myproject/blog/migrations/: 0002_post_created_at_post_updated_at.py  0003_user_alter_comment_author_alter_post_author_and_more.py
myproject/blog/static/: style.css
myproject/blog/templates/blog/: base.html  login.html  post_detail.html  post_form.html  post_list.html  signup.html
myproject/blog/tests/: factories.py  integration_tests.py  test_api_views.py  unit_tests.py
